Update README, javadoc, and add Maven plugin